upload api openapi가 잘못되어있었음
