# mofumofu-ui/src/lib/api/user/types.ts
@@ -33,3 +33,7 @@ export interface UpdateProfileRequest {
 	website?: string | null;
 	password?: string | null;
 }
+
+export interface ImageUploadResponse {
+	filename: string;
+}
